--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
-    <meta name="keywords" content="template, initial setup, html, css, links, futureUse">
+    <meta name="keywords" content="baby, mythicalCreature, cute , dragon, pet">
     <meta name="author" content="Larissa Slabbert 261035">
 
     <title>HTML Template</title>
@@ -14,28 +14,28 @@
 </head>
 <body>
     <header id="mainHeader" 
-        <h1>Larisaa Slabbert</h1>
+        <h1>Mythos Cradle</h1>
 
-        <p>First Year Interactive Development Student</p>
+        <p>Adopt a mythical Creature</p>
 </header>
 
 <section class="card">
-    <h2>About Me</h2>
+    <h2>Adopt</h2>
 
-    <p>I am learning HTML and CSS. This is my first styled webpage</p>
+    <p>Adopt an adorable baby mythical creature</p>
 </section>
 
 <section class="card">
-    <h2>Skills</h2>
+    <h2>Creatures</h2>
     <ul> 
-        <li>HTML</li> 
-        <li>CSS</li>
-        <li>Problem Solving</li>
+        <li>Dragon</li> 
+        <li>Griffin</li>
+        <li>Wyvern</li>
     </ul>
 </section>
 
 <footer> //footer
-    <p>© &copy; 2026 Larissa Slabbert </p> 
+    <p> &copy; 2026 Larissa Slabbert </p> 
 </footer>
 
 </body>
